notebooks/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> empty
Rule 2     program -> statements
Rule 3     statements -> statements statement
Rule 4     statements -> statement
Rule 5     statement -> end_statement
Rule 6     statement -> begin_statement
Rule 7     statement -> expr SEP
Rule 8     statement -> var_assign SEP
Rule 9     statement -> LET var : var_type SEP
Rule 10    statement -> var_define SEP
Rule 11    statement -> class_definition
Rule 12    statement -> struct_definition
Rule 13    statement -> if_statement
Rule 14    statement -> for_statement
Rule 15    statement -> while_statement
Rule 16    statement -> return_statement
Rule 17    statement -> function_definition
Rule 18    statement -> import_statement
Rule 19    class_definition -> CLASS ID { function_definitions }
Rule 20    function_definitions -> function_definitions function_definition
Rule 21    function_definitions -> function_definition
Rule 22    function_definitions -> empty
Rule 23    struct_definition -> STRUCT ID { struct_fields } SEP
Rule 24    struct_fields -> struct_fields struct_field
Rule 25    struct_fields -> struct_field
Rule 26    struct_field -> LET ID : var_type SEP
Rule 27    var_type -> DICT_TYPE
Rule 28    var_type -> LIST_TYPE
Rule 29    var_type -> BOOL_TYPE
Rule 30    var_type -> STRING_TYPE
Rule 31    var_type -> FLOAT_TYPE
Rule 32    var_type -> INT_TYPE
Rule 33    import_statement -> IMPORT STRING SEP
Rule 34    function_definition -> FN ID ( params ) block
Rule 35    expr -> getter
Rule 36    expr -> { member_list }
Rule 37    expr -> NIL
Rule 38    expr -> var
Rule 39    expr -> var [ expr ]
Rule 40    expr -> list_val
Rule 41    expr -> FALSE
Rule 42    expr -> TRUE
Rule 43    expr -> STRING
Rule 44    expr -> FLOAT
Rule 45    expr -> INT
Rule 46    expr -> ( expr )
Rule 47    expr -> expr % expr  [precedence=left, level=11]
Rule 48    expr -> expr / expr  [precedence=left, level=11]
Rule 49    expr -> expr * expr  [precedence=left, level=11]
Rule 50    expr -> expr - expr  [precedence=left, level=10]
Rule 51    expr -> expr + expr  [precedence=left, level=10]
Rule 52    expr -> ! expr  [precedence=right, level=13]
Rule 53    expr -> + expr  [precedence=right, level=12]
Rule 54    expr -> - expr  [precedence=right, level=12]
Rule 55    expr -> ~ expr  [precedence=right, level=12]
Rule 56    expr -> expr | expr  [precedence=left, level=4]
Rule 57    expr -> expr ^ expr  [precedence=left, level=5]
Rule 58    expr -> expr & expr  [precedence=left, level=6]
Rule 59    expr -> expr SHR expr  [precedence=left, level=9]
Rule 60    expr -> expr SHL expr  [precedence=left, level=9]
Rule 61    expr -> expr GREATER expr  [precedence=left, level=8]
Rule 62    expr -> expr LESS expr  [precedence=left, level=8]
Rule 63    expr -> expr OR expr  [precedence=left, level=2]
Rule 64    expr -> expr AND expr  [precedence=left, level=3]
Rule 65    expr -> expr GREATEREQ expr  [precedence=left, level=8]
Rule 66    expr -> expr LESSEQ expr  [precedence=left, level=8]
Rule 67    expr -> expr NOTEQ expr  [precedence=left, level=7]
Rule 68    expr -> expr EQEQ expr  [precedence=left, level=7]
Rule 69    expr -> expr PIPE ID ( args )
Rule 70    expr -> ID DOUBLECOLON ID ( args )
Rule 71    expr -> ID ( args )
Rule 72    expr -> expr ? expr : expr
Rule 73    expr -> TYPEOF expr
Rule 74    expr -> LAMBDA ( params ) ARROW expr
Rule 75    expr -> ID LEFTARROW { struct_init_exprs }
Rule 76    struct_init_exprs -> struct_init_exprs , expr
Rule 77    struct_init_exprs -> expr
Rule 78    var_define -> LET getter ASSIGN expr
Rule 79    var_define -> LET var ASSIGN expr
Rule 80    return_statement -> RETURN expr SEP
Rule 81    var_assign -> DEC var  [precedence=right, level=12]
Rule 82    var_assign -> INC var  [precedence=right, level=12]
Rule 83    var_assign -> var SHRASGN expr  [precedence=right, level=1]
Rule 84    var_assign -> var SHLASGN expr  [precedence=right, level=1]
Rule 85    var_assign -> var XORASGN expr  [precedence=right, level=1]
Rule 86    var_assign -> var ORASGN expr  [precedence=right, level=1]
Rule 87    var_assign -> var ANDASGN expr  [precedence=right, level=1]
Rule 88    var_assign -> var MODULOASGN expr  [precedence=right, level=1]
Rule 89    var_assign -> var SLASHASGN expr  [precedence=right, level=1]
Rule 90    var_assign -> var STARASGN expr  [precedence=right, level=1]
Rule 91    var_assign -> var MINUSASGN expr  [precedence=right, level=1]
Rule 92    var_assign -> var PLUSASGN expr  [precedence=right, level=1]
Rule 93    var_assign -> var ASSIGN expr
Rule 94    if_statement -> IF expr block
Rule 95    if_statement -> IF expr block ELSE block
Rule 96    while_statement -> WHILE expr block
Rule 97    for_statement -> FOR var_assign SEP expr SEP var_assign block
Rule 98    list_val -> [ exprs ]
Rule 99    exprs -> exprs , expr
Rule 100   exprs -> expr
Rule 101   exprs -> empty
Rule 102   var -> var [ expr ]
Rule 103   var -> ID
Rule 104   empty -> <empty>
Rule 105   block -> statement
Rule 106   block -> { program }
Rule 107   params -> empty
Rule 108   params -> param
Rule 109   params -> params , param
Rule 110   param -> ID : var_type
Rule 111   args -> empty
Rule 112   args -> arg
Rule 113   args -> args , arg
Rule 114   arg -> expr
Rule 115   member_list -> member_list , member
Rule 116   member_list -> member
Rule 117   member_list -> empty
Rule 118   member -> STRING : expr
Rule 119   getter -> ID
Rule 120   getter -> getter . ID
Rule 121   begin_statement -> BEGIN
Rule 122   end_statement -> END

Terminals, with rules where they appear:

!                    : 52
%                    : 47
&                    : 58
(                    : 34 46 69 70 71 74
)                    : 34 46 69 70 71 74
*                    : 49
+                    : 51 53
,                    : 76 99 109 113 115
-                    : 50 54
.                    : 120
/                    : 48
:                    : 9 26 72 110 118
?                    : 72
AND                  : 64
ANDASGN              : 87
ARROW                : 74
ASSIGN               : 78 79 93
BEGIN                : 121
BOOL_TYPE            : 29
CLASS                : 19
DEC                  : 81
DICT_TYPE            : 27
DOUBLECOLON          : 70
ELSE                 : 95
END                  : 122
EQEQ                 : 68
FALSE                : 41
FLOAT                : 44
FLOAT_TYPE           : 31
FN                   : 34
FOR                  : 97
GREATER              : 61
GREATEREQ            : 65
ID                   : 19 23 26 34 69 70 70 71 75 103 110 119 120
IF                   : 94 95
IMPORT               : 33
INC                  : 82
INT                  : 45
INT_TYPE             : 32
LAMBDA               : 74
LEFTARROW            : 75
LESS                 : 62
LESSEQ               : 66
LET                  : 9 26 78 79
LIST_TYPE            : 28
MINUSASGN            : 91
MODULOASGN           : 88
NIL                  : 37
NOTEQ                : 67
OR                   : 63
ORASGN               : 86
PIPE                 : 69
PLUSASGN             : 92
RETURN               : 80
SEP                  : 7 8 9 10 23 26 33 80 97 97
SHL                  : 60
SHLASGN              : 84
SHR                  : 59
SHRASGN              : 83
SLASHASGN            : 89
STARASGN             : 90
STRING               : 33 43 118
STRING_TYPE          : 30
STRUCT               : 23
TRUE                 : 42
TYPEOF               : 73
WHILE                : 96
XORASGN              : 85
[                    : 39 98 102
]                    : 39 98 102
^                    : 57
error                : 
{                    : 19 23 36 75 106
|                    : 56
}                    : 19 23 36 75 106
~                    : 55

Nonterminals, with rules where they appear:

arg                  : 112 113
args                 : 69 70 71 113
begin_statement      : 6
block                : 34 94 95 95 96 97
class_definition     : 11
empty                : 1 22 101 107 111 117
end_statement        : 5
expr                 : 7 39 46 47 47 48 48 49 49 50 50 51 51 52 53 54 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 72 72 72 73 74 76 77 78 79 80 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 99 100 102 114 118
exprs                : 98 99
for_statement        : 14
function_definition  : 17 20 21
function_definitions : 19 20
getter               : 35 78 120
if_statement         : 13
import_statement     : 18
list_val             : 40
member               : 115 116
member_list          : 36 115
param                : 108 109
params               : 34 74 109
program              : 106 0
return_statement     : 16
statement            : 3 4 105
statements           : 2 3
struct_definition    : 12
struct_field         : 24 25
struct_fields        : 23 24
struct_init_exprs    : 75 76
var                  : 9 38 39 79 81 82 83 84 85 86 87 88 89 90 91 92 93 102
var_assign           : 8 97 97
var_define           : 10
var_type             : 9 26 110
while_statement      : 15


state 0

    (0) S' -> . program
    (1) program -> . empty
    (2) program -> . statements
    (104) empty -> .
    (3) statements -> . statements statement
    (4) statements -> . statement
    (5) statement -> . end_statement
    (6) statement -> . begin_statement
    (7) statement -> . expr SEP
    (8) statement -> . var_assign SEP
    (9) statement -> . LET var : var_type SEP
    (10) statement -> . var_define SEP
    (11) statement -> . class_definition
    (12) statement -> . struct_definition
    (13) statement -> . if_statement
    (14) statement -> . for_statement
    (15) statement -> . while_statement
    (16) statement -> . return_statement
    (17) statement -> . function_definition
    (18) statement -> . import_statement
    (122) end_statement -> . END
    (121) begin_statement -> . BEGIN
    (35) expr -> . getter
    (36) expr -> . { member_list }
    (37) expr -> . NIL
    (38) expr -> . var
    (39) expr -> . var [ expr ]
    (40) expr -> . list_val
    (41) expr -> . FALSE
    (42) expr -> . TRUE
    (43) expr -> . STRING
    (44) expr -> . FLOAT
    (45) expr -> . INT
    (46) expr -> . ( expr )
    (47) expr -> . expr % expr
    (48) expr -> . expr / expr
    (49) expr -> . expr * expr
    (50) expr -> . expr - expr
    (51) expr -> . expr + expr
    (52) expr -> . ! expr
    (53) expr -> . + expr
    (54) expr -> . - expr
    (55) expr -> . ~ expr
    (56) expr -> . expr | expr
    (57) expr -> . expr ^ expr
    (58) expr -> . expr & expr
    (59) expr -> . expr SHR expr
    (60) expr -> . expr SHL expr
    (61) expr -> . expr GREATER expr
    (62) expr -> . expr LESS expr
    (63) expr -> . expr OR expr
    (64) expr -> . expr AND expr
    (65) expr -> . expr GREATEREQ expr
    (66) expr -> . expr LESSEQ expr
    (67) expr -> . expr NOTEQ expr
    (68) expr -> . expr EQEQ expr
    (69) expr -> . expr PIPE ID ( args )
    (70) expr -> . ID DOUBLECOLON ID ( args )
    (71) expr -> . ID ( args )
    (72) expr -> . expr ? expr : expr
    (73) expr -> . TYPEOF expr
    (74) expr -> . LAMBDA ( params ) ARROW expr
    (75) expr -> . ID LEFTARROW { struct_init_exprs }
    (81) var_assign -> . DEC var
    (82) var_assign -> . INC var
    (83) var_assign -> . var SHRASGN expr
    (84) var_assign -> . var SHLASGN expr
    (85) var_assign -> . var XORASGN expr
    (86) var_assign -> . var ORASGN expr
    (87) var_assign -> . var ANDASGN expr
    (88) var_assign -> . var MODULOASGN expr
    (89) var_assign -> . var SLASHASGN expr
    (90) var_assign -> . var STARASGN expr
    (91) var_assign -> . var MINUSASGN expr
    (92) var_assign -> . var PLUSASGN expr
    (93) var_assign -> . var ASSIGN expr
    (78) var_define -> . LET getter ASSIGN expr
    (79) var_define -> . LET var ASSIGN expr
    (19) class_definition -> . CLASS ID { function_definitions }
    (23) struct_definition -> . STRUCT ID { struct_fields } SEP
    (94) if_statement -> . IF expr block
    (95) if_statement -> . IF expr block ELSE block
    (97) for_statement -> . FOR var_assign SEP expr SEP var_assign block
    (96) while_statement -> . WHILE expr block
    (80) return_statement -> . RETURN expr SEP
    (34) function_definition -> . FN ID ( params ) block
    (33) import_statement -> . IMPORT STRING SEP
    (119) getter -> . ID
    (120) getter -> . getter . ID
    (102) var -> . var [ expr ]
    (103) var -> . ID
    (98) list_val -> . [ exprs ]
    $end            reduce using rule 104 (empty -> .)
    LET             shift and go to state 9
    END             shift and go to state 20
    BEGIN           shift and go to state 21
    {               shift and go to state 23
    NIL             shift and go to state 24
    FALSE           shift and go to state 27
    TRUE            shift and go to state 28
    STRING          shift and go to state 29
    FLOAT           shift and go to state 30
    INT             shift and go to state 31
    (               shift and go to state 32
    !               shift and go to state 35
    +               shift and go to state 34
    -               shift and go to state 33
    ~               shift and go to state 36
    ID              shift and go to state 37
    TYPEOF          shift and go to state 38
    LAMBDA          shift and go to state 39
    DEC             shift and go to state 40
    INC             shift and go to state 41
    CLASS           shift and go to state 42
    STRUCT          shift and go to state 43
    IF              shift and go to state 44
    FOR             shift and go to state 45
    WHILE           shift and go to state 46
    RETURN          shift and go to state 47
    FN              shift and go to state 48
    IMPORT          shift and go to state 49
    [               shift and go to state 25

    program                        shift and go to state 1
    empty                          shift and go to state 2
    statements                     shift and go to state 3
    statement                      shift and go to state 4
    end_statement                  shift and go to state 5
    begin_statement                shift and go to state 6
    expr                           shift and go to state 7
    var_assign                     shift and go to state 8
    var                            shift and go to state 10
    var_define                     shift and go to state 11
    class_definition               shift and go to state 12
    struct_definition              shift and go to state 13
    if_statement                   shift and go to state 14
    for_statement                  shift and go to state 15
    while_statement                shift and go to state 16
    return_statement               shift and go to state 17
    function_definition            shift and go to state 18
    import_statement               shift and go to state 19
    getter                         shift and go to state 22
    list_val                       shift and go to state 26

state 1

    (0) S' -> program .


state 2

    (1) program -> empty .
    $end            reduce using rule 1 (program -> empty .)


state 3

    (2) program -> statements .
    (3) statements -> statements . statement
    (5) statement -> . end_statement
    (6) statement -> . begin_statement
    (7) statement -> . expr SEP
    (8) statement -> . var_assign SEP
    (9) statement -> . LET var : var_type SEP
    (10) statement -> . var_define SEP
    (11) statement -> . class_definition
    (12) statement -> . struct_definition
    (13) statement -> . if_statement
    (14) statement -> . for_statement
    (15) statement -> . while_statement
    (16) statement -> . return_statement
    (17) statement -> . function_definition
    (18) statement -> . import_statement
    (122) end_statement -> . END
    (121) begin_statement -> . BEGIN
    (35) expr -> . getter
    (36) expr -> . { member_list }
    (37) expr -> . NIL
    (38) expr -> . var
    (39) expr -> . var [ expr ]
    (40) expr -> . list_val
    (41) expr -> . FALSE
    (42) expr -> . TRUE
    (43) expr -> . STRING
    (44) expr -> . FLOAT
    (45) expr -> . INT
    (46) expr -> . ( expr )
    (47) expr -> . expr % expr
    (48) expr -> . expr / expr
    (49) expr -> . expr * expr
    (50) expr -> . expr - expr
    (51) expr -> . expr + expr
    (52) expr -> . ! expr
    (53) expr -> . + expr
    (54) expr -> . - expr
    (55) expr -> . ~ expr
    (56) expr -> . expr | expr
    (57) expr -> . expr ^ expr
    (58) expr -> . expr & expr
    (59) expr -> . expr SHR expr
    (60) expr -> . expr SHL expr
    (61) expr -> . expr GREATER expr
    (62) expr -> . expr LESS expr
    (63) expr -> . expr OR expr
    (64) expr -> . expr AND expr
    (65) expr -> . expr GREATEREQ expr
    (66) expr -> . expr LESSEQ expr
    (67) expr -> . expr NOTEQ expr
    (68) expr -> . expr EQEQ expr
    (69) expr -> . expr PIPE ID ( args )
    (70) expr -> . ID DOUBLECOLON ID ( args )
    (71) expr -> . ID ( args )
    (72) expr -> . expr ? expr : expr
    (73) expr -> . TYPEOF expr
    (74) expr -> . LAMBDA ( params ) ARROW expr
    (75) expr -> . ID LEFTARROW { struct_init_exprs }
    (81) var_assign -> . DEC var
    (82) var_assign -> . INC var
    (83) var_assign -> . var SHRASGN expr
    (84) var_assign -> . var SHLASGN expr
    (85) var_assign -> . var XORASGN expr
    (86) var_assign -> . var ORASGN expr
    (87) var_assign -> . var ANDASGN expr
    (88) var_assign -> . var MODULOASGN expr
    (89) var_assign -> . var SLASHASGN expr
    (90) var_assign -> . var STARASGN expr
    (91) var_assign -> . var MINUSASGN expr
    (92) var_assign -> . var PLUSASGN expr
    (93) var_assign -> . var ASSIGN expr
    (78) var_define -> . LET getter ASSIGN expr
    (79) var_define -> . LET var ASSIGN expr
    (19) class_definition -> . CLASS ID { function_definitions }
    (23) struct_definition -> . STRUCT ID { struct_fields } SEP
    (94) if_statement -> . IF expr block
    (95) if_statement -> . IF expr block ELSE block
    (97) for_statement -> . FOR var_assign SEP expr SEP var_assign block
    (96) while_statement -> . WHILE expr block
    (80) return_statement -> . RETURN expr SEP
    (34) function_definition -> . FN ID ( params ) block
    (33) import_statement -> . IMPORT STRING SEP
    (119) getter -> . ID
    (120) getter -> . getter . ID
    (102) var -> . var [ expr ]
    (103) var -> . ID
    (98) list_val -> . [ exprs ]
    $end            reduce using rule 2 (program -> statements .)
    }               reduce using rule 2 (program -> statements .)
    LET             shift and go to state 9
    END             shift and go to state 20
    BEGIN           shift and go to state 21
    {               shift and go to state 23
    NIL             shift and go to state 24
    FALSE           shift and go to state 27
    TRUE            shift and go to state 28
    STRING          shift and go to state 29
    FLOAT           shift and go to state 30
    INT             shift and go to state 31
    (               shift and go to state 32
    !               shift and go to state 35
    +               shift and go to state 34
    -               shift and go to state 33
    ~               shift and go to state 36
    ID              shift and go to state 37
    TYPEOF          shift and go to state 38
    LAMBDA          shift and go to state 39
    DEC             shift and go to state 40
    INC             shift and go to state 41
    CLASS           shift and go to state 42
    STRUCT          shift and go to state 43
    IF              shift and go to state 44
    FOR             shift and go to state 45
    WHILE           shift and go to state 46
    RETURN          shift and go to state 47
    FN              shift and go to state 48
    IMPORT          shift and go to state 49
    [               shift and go to state 25

    statement                      shift and go to state 50
    end_statement                  shift and go to state 5
    begin_statement                shift and go to state 6
    expr                           shift and go to state 7
    var_assign                     shift and go to state 8
    var                            shift and go to state 10
    var_define                     shift and go to state 11
    class_definition               shift and go to state 12
    struct_definition              shift and go to state 13
    if_statement                   shift and go to state 14
    for_statement                  shift and go to state 15
    while_statement                shift and go to state 16
    return_statement               shift and go to state 17
    function_definition            shift and go to state 18
    import_statement               shift and go to state 19
    getter                         shift and go to state 22
    list_val                       shift and go to state 26

state 4

    (4) statements -> statement .
    LET             reduce using rule 4 (statements -> statement .)
    END             reduce using rule 4 (statements -> statement .)
    BEGIN           reduce using rule 4 (statements -> statement .)
    {               reduce using rule 4 (statements -> statement .)
    NIL             reduce using rule 4 (statements -> statement .)
    FALSE           reduce using rule 4 (statements -> statement .)
    TRUE            reduce using rule 4 (statements -> statement .)
    STRING          reduce using rule 4 (statements -> statement .)
    FLOAT           reduce using rule 4 (statements -> statement .)
    INT             reduce using rule 4 (statements -> statement .)
    (               reduce using rule 4 (statements -> statement .)
    !               reduce using rule 4 (statements -> statement .)
    +               reduce using rule 4 (statements -> statement .)
    -               reduce using rule 4 (statements -> statement .)
    ~               reduce using rule 4 (statements -> statement .)
    ID              reduce using rule 4 (statements -> statement .)
    TYPEOF          reduce using rule 4 (statements -> statement .)
    LAMBDA          reduce using rule 4 (statements -> statement .)
    DEC             reduce using rule 4 (statements -> statement .)
    INC             reduce using rule 4 (statements -> statement .)
    CLASS           reduce using rule 4 (statements -> statement .)
    STRUCT          reduce using rule 4 (statements -> statement .)
    IF              reduce using rule 4 (statements -> statement .)
    FOR             reduce using rule 4 (statements -> statement .)
    WHILE           reduce using rule 4 (statements -> statement .)
    RETURN          reduce using rule 4 (statements -> statement .)
    FN              reduce using rule 4 (statements -> statement .)
    IMPORT          reduce using rule 4 (statements -> statement .)
    [               reduce using rule 4 (statements -> statement .)
    $end            reduce using rule 4 (statements -> statement .)
    }               reduce using rule 4 (statements -> statement .)


state 5

    (5) statement -> end_statement .
    LET             reduce using rule 5 (statement -> end_statement .)
    END             reduce using rule 5 (statement -> end_statement .)
    BEGIN           reduce using rule 5 (statement -> end_statement .)
    {               reduce using rule 5 (statement -> end_statement .)
    NIL             reduce using rule 5 (statement -> end_statement .)
    FALSE           reduce using rule 5 (statement -> end_statement .)
    TRUE            reduce using rule 5 (statement -> end_statement .)
    STRING          reduce using rule 5 (statement -> end_statement .)
    FLOAT           reduce using rule 5 (statement -> end_statement .)
    INT             reduce using rule 5 (statement -> end_statement .)
    (               reduce using rule 5 (statement -> end_statement .)
    !               reduce using rule 5 (statement -> end_statement .)
    +               reduce using rule 5 (statement -> end_statement .)
    -               reduce using rule 5 (statement -> end_statement .)
    ~               reduce using rule 5 (statement -> end_statement .)
    ID              reduce using rule 5 (statement -> end_statement .)
    TYPEOF          reduce using rule 5 (statement -> end_statement .)
    LAMBDA          reduce using rule 5 (statement -> end_statement .)
    DEC             reduce using rule 5 (statement -> end_statement .)
    INC             reduce using rule 5 (statement -> end_statement .)
    CLASS           reduce using rule 5 (statement -> end_statement .)
    STRUCT          reduce using rule 5 (statement -> end_statement .)
    IF              reduce using rule 5 (statement -> end_statement .)
    FOR             reduce using rule 5 (statement -> end_statement .)
    WHILE           reduce using rule 5 (statement -> end_statement .)
    RETURN          reduce using rule 5 (statement -> end_statement .)
    FN              reduce using rule 5 (statement -> end_statement .)
    IMPORT          reduce using rule 5 (statement -> end_statement .)
    [               reduce using rule 5 (statement -> end_statement .)
    $end            reduce using rule 5 (statement -> end_statement .)
    }               reduce using rule 5 (statement -> end_statement .)
    ELSE            reduce using rule 5 (statement -> end_statement .)


state 6

    (6) statement -> begin_statement .
    LET             reduce using rule 6 (statement -> begin_statement .)
    END             reduce using rule 6 (statement -> begin_statement .)
    BEGIN           reduce using rule 6 (statement -> begin_statement .)
    {               reduce using rule 6 (statement -> begin_statement .)
    NIL             reduce using rule 6 (statement -> begin_statement .)
    FALSE           reduce using rule 6 (statement -> begin_statement .)
    TRUE            reduce using rule 6 (statement -> begin_statement .)
    STRING          reduce using rule 6 (statement -> begin_statement .)
    FLOAT           reduce using rule 6 (statement -> begin_statement .)
    INT             reduce using rule 6 (statement -> begin_statement .)
    (               reduce using rule 6 (statement -> begin_statement .)
    !               reduce using rule 6 (statement -> begin_statement .)
    +               reduce using rule 6 (statement -> begin_statement .)
    -               reduce using rule 6 (statement -> begin_statement .)
    ~               reduce using rule 6 (statement -> begin_statement .)
    ID              reduce using rule 6 (statement -> begin_statement .)
    TYPEOF          reduce using rule 6 (statement -> begin_statement .)
    LAMBDA          reduce using rule 6 (statement -> begin_statement .)
    DEC             reduce using rule 6 (statement -> begin_statement .)
    INC             reduce using rule 6 (statement -> begin_statement .)
    CLASS           reduce using rule 6 (statement -> begin_statement .)
    STRUCT          reduce using rule 6 (statement -> begin_statement .)
    IF              reduce using rule 6 (statement -> begin_statement .)
    FOR             reduce using rule 6 (statement -> begin_statement .)
    WHILE           reduce using rule 6 (statement -> begin_statement .)
    RETURN          reduce using rule 6 (statement -> begin_statement .)
    FN              reduce using rule 6 (statement -> begin_statement .)
    IMPORT          reduce using rule 6 (statement -> begin_statement .)
    [               reduce using rule 6 (statement -> begin_statement .)
    $end            reduce using rule 6 (statement -> begin_statement .)
    }               reduce using rule 6 (statement -> begin_statement .)
    ELSE            reduce using rule 6 (statement -> begin_statement .)


state 7

    (7) statement -> expr . SEP
    (47) expr -> expr . % expr
    (48) expr -> expr . / expr
    (49) expr -> expr . * expr
    (50) expr -> expr . - expr
    (51) expr -> expr . + expr
    (56) expr -> expr . | expr
    (57) expr -> expr . ^ expr
    (58) expr -> expr . & expr
    (59) expr -> expr . SHR expr
    (60) expr -> expr . SHL expr
    (61) expr -> expr . GREATER expr
    (62) expr -> expr . LESS expr
    (63) expr -> expr . OR expr
    (64) expr -> expr . AND expr
    (65) expr -> expr . GREATEREQ expr
    (66) expr -> expr . LESSEQ expr
    (67) expr -> expr . NOTEQ expr
    (68) expr -> expr . EQEQ expr
    (69) expr -> expr . PIPE ID ( args )
    (72) expr -> expr . ? expr : expr
    SEP             shift and go to state 51
    %               shift and go to state 52
    /               shift and go to state 53
    *               shift and go to state 54
    -               shift and go to state 55
    +               shift and go to state 56
    |               shift and go to state 57
    ^               shift and go to state 58
    &               shift and go to state 59
    SHR             shift and go to state 60
    SHL             shift and go to state 61
    GREATER         shift and go to state 62
    LESS            shift and go to state 63
    OR              shift and go to state 64
    AND             shift and go to state 65
    GREATEREQ       shift and go to state 66
    LESSEQ          shift and go to state 67
    NOTEQ           shift and go to state 68
    EQEQ            shift and go to state 69
    PIPE            shift and go to state 70
    ?               shift and go to state 71


state 8

    (8) statement -> var_assign . SEP
    SEP             shift and go to state 72


state 9

    (9) statement -> LET . var : var_type SEP
    (78) var_define -> LET . getter ASSIGN expr
    (79) var_define -> LET . var ASSIGN expr
    (102) var -> . var [ expr ]
    (103) var -> . ID
    (119) getter -> . ID
    (120) getter -> . getter . ID
    ID              shift and go to state 75

    var                            shift and go to state 73
    getter                         shift and go to state 74

state 10

    (38) expr -> var .
    (39) expr -> var . [ expr ]
    (83) var_assign -> var . SHRASGN expr
    (84) var_assign -> var . SHLASGN expr
    (85) var_assign -> var . XORASGN expr
    (86) var_assign -> var . ORASGN expr
    (87) var_assign -> var . ANDASGN expr
    (88) var_assign -> var . MODULOASGN expr
    (89) var_assign -> var . SLASHASGN expr
    (90) var_assign -> var . STARASGN expr
    (91) var_assign -> var . MINUSASGN expr
    (92) var_assign -> var . PLUSASGN expr
    (93) var_assign -> var . ASSIGN expr
    (102) var -> var . [ expr ]
    SEP             reduce using rule 38 (expr -> var .)
    %               reduce using rule 38 (expr -> var .)
    /               reduce using rule 38 (expr -> var .)
    *               reduce using rule 38 (expr -> var .)
    -               reduce using rule 38 (expr -> var .)
    +               reduce using rule 38 (expr -> var .)
    |               reduce using rule 38 (expr -> var .)
    ^               reduce using rule 38 (expr -> var .)
    &               reduce using rule 38 (expr -> var .)
    SHR             reduce using rule 38 (expr -> var .)
    SHL             reduce using rule 38 (expr -> var .)
    GREATER         reduce using rule 38 (expr -> var .)
    LESS            reduce using rule 38 (expr -> var .)
    OR              reduce using rule 38 (expr -> var .)
    AND             reduce using rule 38 (expr -> var .)
    GREATEREQ       reduce using rule 38 (expr -> var .)
    LESSEQ          reduce using rule 38 (expr -> var .)
    NOTEQ           reduce using rule 38 (expr -> var .)
    EQEQ            reduce using rule 38 (expr -> var .)
    PIPE            reduce using rule 38 (expr -> var .)
    ?               reduce using rule 38 (expr -> var .)
    [               shift and go to state 76
    SHRASGN         shift and go to state 77
    SHLASGN         shift and go to state 78
    XORASGN         shift and go to state 79
    ORASGN          shift and go to state 80
    ANDASGN         shift and go to state 81
    MODULOASGN      shift and go to state 82
    SLASHASGN       shift and go to state 83
    STARASGN        shift and go to state 84
    MINUSASGN       shift and go to state 85
    PLUSASGN        shift and go to state 86
    ASSIGN          shift and go to state 87


state 11

    (10) statement -> var_define . SEP
    SEP             shift and go to state 88


state 12

    (11) statement -> class_definition .
    LET             reduce using rule 11 (statement -> class_definition .)
    END             reduce using rule 11 (statement -> class_definition .)
    BEGIN           reduce using rule 11 (statement -> class_definition .)
    {               reduce using rule 11 (statement -> class_definition .)
    NIL             reduce using rule 11 (statement -> class_definition .)
    FALSE           reduce using rule 11 (statement -> class_definition .)
    TRUE            reduce using rule 11 (statement -> class_definition .)
    STRING          reduce using rule 11 (statement -> class_definition .)
    FLOAT           reduce using rule 11 (statement -> class_definition .)
    INT             reduce using rule 11 (statement -> class_definition .)
    (               reduce using rule 11 (statement -> class_definition .)
    !               reduce using rule 11 (statement -> class_definition .)
    +               reduce using rule 11 (statement -> class_definition .)
    -               reduce using rule 11 (statement -> class_definition .)
    ~               reduce using rule 11 (statement -> class_definition .)
    ID              reduce using rule 11 (statement -> class_definition .)
    TYPEOF          reduce using rule 11 (statement -> class_definition .)
    LAMBDA          reduce using rule 11 (statement -> class_definition .)
    DEC             reduce using rule 11 (statement -> class_definition .)
    INC             reduce using rule 11 (statement -> class_definition .)
    CLASS           reduce using rule 11 (statement -> class_definition .)
    STRUCT          reduce using rule 11 (statement -> class_definition .)
    IF              reduce using rule 11 (statement -> class_definition .)
    FOR             reduce using rule 11 (statement -> class_definition .)
    WHILE           reduce using rule 11 (statement -> class_definition .)
    RETURN          reduce using rule 11 (statement -> class_definition .)
    FN              reduce using rule 11 (statement -> class_definition .)
    IMPORT          reduce using rule 11 (statement -> class_definition .)
    [               reduce using rule 11 (statement -> class_definition .)
    $end            reduce using rule 11 (statement -> class_definition .)
    }               reduce using rule 11 (statement -> class_definition .)
    ELSE            reduce using rule 11 (statement -> class_definition .)


state 13

    (12) statement -> struct_definition .
    LET             reduce using rule 12 (statement -> struct_definition .)
    END             reduce using rule 12 (statement -> struct_definition .)
    BEGIN           reduce using rule 12 (statement -> struct_definition .)
    {               reduce using rule 12 (statement -> struct_definition .)
    NIL             reduce using rule 12 (statement -> struct_definition .)
    FALSE           reduce using rule 12 (statement -> struct_definition .)
    TRUE            reduce using rule 12 (statement -> struct_definition .)
    STRING          reduce using rule 12 (statement -> struct_definition .)
    FLOAT           reduce using rule 12 (statement -> struct_definition .)
    INT             reduce using rule 12 (statement -> struct_definition .)
    (               reduce using rule 12 (statement -> struct_definition .)
    !               reduce using rule 12 (statement -> struct_definition .)
    +               reduce using rule 12 (statement -> struct_definition .)
    -               reduce using rule 12 (statement -> struct_definition .)
    ~               reduce using rule 12 (statement -> struct_definition .)
    ID              reduce using rule 12 (statement -> struct_definition .)
    TYPEOF          reduce using rule 12 (statement -> struct_definition .)
    LAMBDA          reduce using rule 12 (statement -> struct_definition .)
    DEC             reduce using rule 12 (statement -> struct_definition .)
    INC             reduce using rule 12 (statement -> struct_definition .)
    CLASS           reduce using rule 12 (statement -> struct_definition .)
    STRUCT          reduce using rule 12 (statement -> struct_definition .)
    IF              reduce using rule 12 (statement -> struct_definition .)
    FOR             reduce using rule 12 (statement -> struct_definition .)
    WHILE           reduce using rule 12 (statement -> struct_definition .)
    RETURN          reduce using rule 12 (statement -> struct_definition .)
    FN              reduce using rule 12 (statement -> struct_definition .)
    IMPORT          reduce using rule 12 (statement -> struct_definition .)
    [               reduce using rule 12 (statement -> struct_definition .)
    $end            reduce using rule 12 (statement -> struct_definition .)
    }               reduce using rule 12 (statement -> struct_definition .)
    ELSE            reduce using rule 12 (statement -> struct_definition .)


state 14
